feat: implement V3.0 full GPU pipeline with A/B benchmarking and validation tests